samples/_failures_safe/1761290784_dc4653_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3af58f70.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3af58f70.c:162:9: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  162 |         token
      |         ^~~~~
      |         Token
./samples/SAFE/__tmp_3af58f70.c:162:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3af58f70.c:162:14: error: expected ‘;’ at end of input
  162 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_3af58f70.c:162:9: error: expected declaration or statement at end of input
  162 |         token
      |         ^~~~~
./samples/SAFE/__tmp_3af58f70.c:162:9: error: expected declaration or statement at end of input
